static/llm-style.css
body {
  background-image: url("images/background-image.png");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
  background-attachment: fixed;
  color: #e0e0e0;
  font-family: 'Segoe UI', sans-serif;
}

.content-wrap {
  width: 90%;
  max-width: 1800px;
  margin: 0 auto;
}

/* Begin header style */
.page-header {
  width: 100%;
  max-width: 1800px;
  margin: 1.9% auto 2.8%;

  display: flex;
  justify-content: space-between;
  align-items: center;
}

.spotify-icon {
  width: 40px;
  height: 40px;
}

.logo-link {
  display: flex;
  align-items: center;
  gap: 10px;
  text-decoration: none;
  color: inherit;
}

.website-title {
  display: flex;
  align-items: center;
  justify-content: left;
  gap: 10px;
}

.website-title h2 {
  margin: 0;
  display: flex;
  align-items: center;
}

.highlight {
  color: #65D56E;
  margin-left: 7px;
}

.page-title {
  display: flex;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 10px;
  margin: 0px;
}

h1 { /* Highlight "Ask AI" in page title */
  font-size: 54px;
  color: white;
  margin: 0;
}

.plus-icon {
  width: 20px;
  height: 20px;
  color: #65D56E;
  flex-shrink: 0;
  display: block;
  transform: translateY(-1.5px);
}

.new-analysis-btn {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  gap: 10px;

  height: 25px;
  padding: 8px 22px;
  border-radius: 999px;

  background: #1F1E1E;
  color: #e0e0e0;
  text-decoration: none;
  font-size: 16px;
  font-weight: 800;
  line-height: 1;
  cursor: pointer;

  border: none;
  box-shadow: 0 0px 10px #65D56E;
  transition: all 0.3s ease;
}

.new-analysis-btn:hover {
  box-shadow: 0 0px 18px #65D56E;
  transform: scale(1.02);
}

.new-analysis-btn:active {
  transform: scale(0.97);
}
/* End header style */

/* Main chatbot area */
.chat-box-container {
  width: 95%;
  max-width: 1800px;
  margin: 40px auto 0;
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* LLM output box */
.chat-box {
  width: 100%;
  min-height: 150px;
  max-height: 420px;
  overflow-y: auto;

  background: #1e1e1e;
  box-shadow: 0 0px 10px #65D56E;
  border-radius: 40px;

  padding: 35px 45px;
  box-sizing: border-box;

  font-size: 20px;
  line-height: 1.5;
}

/* User input */
.question-input {
  width: 85%;
  margin-top: 35px;

  padding: 20px 28px;
  box-sizing: border-box;

  background: #1e1e1e;
  color: #e0e0e0;

  border: none;
  outline: none;
  border-radius: 35px;

  font-size: 22px;
}

.question-input::placeholder {
  color: #9c9c9c;
}

/* Send button */
.question-input-button {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  padding: 15px 30px;
  border-radius: 999px;
  gap: 8px;

  height: 25px;
  background: #65D56E;
  color: #000000;
  text-decoration: none;
  font-size: 20px;
  font-weight: 800;
  line-height: 1;
  cursor: pointer;

  border: none;
  box-shadow: 0 0px 10px #65D56E;
  transition: all 0.3s ease;
}

.question-input-button:hover {
  box-shadow: 0 0px 18px #65D56E;
  transform: scale(1.02);
}

.question-input-button:active {
  transform: scale(0.97);
}

